# my_learning

Math/: readme.md
Mechine Learning/Supervised/Gradient Descent/: gradient-descent-animation(both-m-and-b).ipynb  gradient_descent_step_by_step.ipynb
Mechine Learning/Supervised/Linear_Regression/: main.ipynb  main.py  readme.md
Mechine Learning/Supervised/Multiple Linear Regression/: main.ipynb
asm/Hello World/: hello  hello.asm
asm/Input Texr/: hello  main.asm
asm/Math Operations/: division.md
asm/Subroutine to Print Integers/: main  main.asm  readme.md
asm/Subroutine to Print Strings/: hello  main.asm
c++/: readme.md
c++/Algo/: recursion.cpp
c++/Algo/Fenwik Tree/: a.out  main.cpp  readme.md
c++/Algo/Segment Tree/: a.out  main.cpp
c++/Concurrency/: a.out  callable_funcation.md  main.cpp  readme.md
c++/Concurrency/Condition variables/: main  main.cpp  readme.md
c++/Concurrency/Futures/: async,md  async.cpp  asyncFuture.cpp  main  promise.cpp  readme.md  shared_future.cpp  shared_future.md  wait_for.cpp  wait_until.cpp
c++/Concurrency/Mutual exclusion/: main  main.cpp  readme.md
c++/Data Structure/Linear Data Structure/Static Data Structure/Lock Free Buffer/Basic Variants/: CMakeLists.txt
c++/Data Structure/Linear Data Structure/Static Data Structure/Lock Free Buffer/Basic Variants/src/: main.cpp  threadPool.cpp
c++/KeyWords/: readme.md
c++/Metaprogramming/: readme.md
c++/OOPS/: lnitilization_list.md
c++/Questions/: readme.md
c++/Standard Template Library/: readme.md
c++/Templates/: readme.md
linux/: readme.md
(+50 files in other folders)
